Dark mode fixes (#4543)
* Dark mode fixes

* "Polling Interval" slider not visible in Safari / Firefox
* Dark background not full height in Firefox
  (add color to html tag, use !important since default is !important)
* "Success" banner not visible
* Graph vertical bars (both static and hover bars) not visible
* Make UI a little more consistent with light mode
  * Slightly lighten background, for a differing color between
    header/footer and body.
  * Add shadow and different color to "status" bar

* Add changelog entry

* Sign changelog entry

--- a/web/assets/stylesheets/application.css
+++ b/web/assets/stylesheets/application.css
@@ -469,6 +469,11 @@ span.current-interval {
 
 div.interval-slider input {
   width: 160px;
+  -webkit-appearance: none;
+  height: 3px;
+  margin-top: 5px;
+  border-radius: 2px;
+  background: currentcolor;
 }
 
 #realtime-legend,
